tests/NormalTests/paczka1/fuzzy1/65690436.err
Error in line 1: bhPV1wyi S953 39,0
Error in line 14: 3So A307 97,8
Error in line 18: bO69HPMpe A525 46,8
Error in line 28: bO69HPMpe A307 13,9
Error in line 37: 3So A591 92,9
